; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_parserpdata.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_parserpdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8**, i32*)* @smb_rap_parserpdata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb_rap_parserpdata(i8* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 1, i32* %10, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = getelementptr inbounds i8, i8* %11, i32 1
  store i8* %12, i8** %5, align 8
  %13 = load i8, i8* %11, align 1
  %14 = sext i8 %13 to i32
  switch i32 %14, label %18 [
    i32 66, label %15
    i32 87, label %16
    i32 68, label %17
    i32 79, label %17
    i32 122, label %17
  ]

15:                                               ; preds = %3
  store i32 1, i32* %9, align 4
  br label %20

16:                                               ; preds = %3
  store i32 2, i32* %9, align 4
  br label %20

17:                                               ; preds = %3, %3, %3
  store i32 4, i32* %9, align 4
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @EINVAL, align 4
  store i32 %19, i32* %4, align 4
  br label %36

20:                                               ; preds = %17, %16, %15
  %21 = load i8*, i8** %5, align 8
  %22 = load i8, i8* %21, align 1
  %23 = call i64 @isdigit(i8 signext %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 @strtoul(i8* %26, i8** %8, i32 10)
  %28 = load i32, i32* %9, align 4
  %29 = mul nsw i32 %28, %27
  store i32 %29, i32* %9, align 4
  %30 = load i8*, i8** %8, align 8
  store i8* %30, i8** %5, align 8
  br label %31

31:                                               ; preds = %25, %20
  %32 = load i32, i32* %9, align 4
  %33 = load i32*, i32** %7, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i8*, i8** %5, align 8
  %35 = load i8**, i8*** %6, align 8
  store i8* %34, i8** %35, align 8
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %31, %18
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i64 @isdigit(i8 signext) #1

declare dso_local i32 @strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
